added authors and maintainers to prevent compilation error with miniconda

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ name = "flowboost"
 version = "0.1.1"
 description = "Multi-objective optimization framework for OpenFOAM"
 license = "Apache-2.0"
-authors = [" <>"]
-maintainers = [" <>"]
+authors = ["Daniel Virokannas"]
+maintainers = ["Bulut Tekgul <bulut.tekgul@wartsila.com>"]
 readme = "README.md"
 repository = "https://github.com/499602D2/flowboost"
 keywords = [
